docs/EXPERIMENT_BUILD_ERROR.txt
-- The CXX compiler identification is GNU 13.3.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Cursed Drone experiment: pinned upstream Plaits enabled
-- Configuring done (0.8s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/work/cursed-drone/cursed-drone/build-session
[  1%] Building CXX object CMakeFiles/cursed_drone_daisysp.dir/third_party/daisysp/Source/Filters/svf.cpp.o
[  2%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/chords/chord_bank.cc.o
[  4%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/additive_engine.cc.o
[  5%] Building CXX object CMakeFiles/cursed_drone_daisysp.dir/third_party/daisysp/Source/Noise/clockednoise.cpp.o
[  7%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/bass_drum_engine.cc.o
[  8%] Building CXX object CMakeFiles/cursed_drone_daisysp.dir/third_party/daisysp/Source/Noise/grainlet.cpp.o
[ 10%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/chord_engine.cc.o
[ 11%] Building CXX object CMakeFiles/cursed_drone_daisysp.dir/third_party/daisysp/Source/Noise/particle.cpp.o
[ 13%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/fm_engine.cc.o
[ 14%] Building CXX object CMakeFiles/cursed_drone_daisysp.dir/third_party/daisysp/Source/PhysicalModeling/drip.cpp.o
[ 15%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/grain_engine.cc.o
[ 17%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/hi_hat_engine.cc.o
[ 18%] Building CXX object CMakeFiles/cursed_drone_daisysp.dir/third_party/daisysp/Source/PhysicalModeling/modalvoice.cpp.o
[ 20%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/modal_engine.cc.o
[ 21%] Building CXX object CMakeFiles/cursed_drone_daisysp.dir/third_party/daisysp/Source/PhysicalModeling/resonator.cpp.o
[ 23%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/noise_engine.cc.o
[ 24%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/particle_engine.cc.o
[ 26%] Building CXX object CMakeFiles/cursed_drone_daisysp.dir/third_party/daisysp/Source/Synthesis/oscillator.cpp.o
[ 27%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/snare_drum_engine.cc.o
[ 28%] Linking CXX static library libcursed_drone_daisysp.a
[ 30%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/speech_engine.cc.o
[ 31%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/string_engine.cc.o
[ 33%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/swarm_engine.cc.o
[ 34%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/virtual_analog_engine.cc.o
[ 36%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/waveshaping_engine.cc.o
[ 37%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine/wavetable_engine.cc.o
[ 39%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine2/chiptune_engine.cc.o
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/dsp/engine2/chiptune_engine.cc: In member function ‘virtual void plaits::ChiptuneEngine::Render(const plaits::EngineParameters&, float*, float*, size_t, bool*)’:
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/dsp/engine2/chiptune_engine.cc:112:23: warning: comparison of floating-point type ‘float’ with enumeration type ‘plaits::ChiptuneEngine::<unnamed enum>’ is deprecated [-Wdeprecated-enum-float-conversion]
  112 |   if (envelope_shape_ != NO_ENVELOPE) {
      |       ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
[ 40%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine2/phase_distortion_engine.cc.o
[ 42%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine2/six_op_engine.cc.o
[ 43%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine2/string_machine_engine.cc.o
[ 44%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine2/virtual_analog_vcf_engine.cc.o
[ 46%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/engine2/wave_terrain_engine.cc.o
[ 47%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/fm/algorithms.cc.o
[ 49%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/fm/dx_units.cc.o
[ 50%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/physical_modelling/modal_voice.cc.o
[ 52%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/physical_modelling/resonator.cc.o
[ 52%] Built target cursed_drone_daisysp
[ 53%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/physical_modelling/string.cc.o
[ 55%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/physical_modelling/string_voice.cc.o
[ 56%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/speech/lpc_speech_synth.cc.o
[ 57%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/speech/lpc_speech_synth_controller.cc.o
[ 59%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/speech/lpc_speech_synth_phonemes.cc.o
[ 60%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/speech/lpc_speech_synth_words.cc.o
[ 62%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/speech/naive_speech_synth.cc.o
[ 63%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/speech/sam_speech_synth.cc.o
[ 65%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/voice.cc.o
[ 66%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/stmlib/dsp/atan.cc.o
[ 68%] Building CXX object CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/stmlib/dsp/units.cc.o
In file included from /home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/dsp/voice.cc:30:
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/user_data.h: In function ‘void FLASH_ErasePage(uint32_t)’:
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/user_data.h:42:3: error: ‘printf’ was not declared in this scope
   42 |   printf("--- Erasing page at %08x ---\n", address);
      |   ^~~~~~
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/user_data.h:1:1: note: ‘printf’ is defined in header ‘<cstdio>’; did you forget to ‘#include <cstdio>’?
  +++ |+#include <cstdio>
    1 | // Copyright 2021 Emilie Gillet.
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/user_data.h: In function ‘void FLASH_ProgramWord(uint32_t, uint32_t)’:
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/user_data.h:47:5: error: ‘printf’ was not declared in this scope
   47 |     printf("%08x ", address);
      |     ^~~~~~
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/user_data.h:47:5: note: ‘printf’ is defined in header ‘<cstdio>’; did you forget to ‘#include <cstdio>’?
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/user_data.h:49:3: error: ‘printf’ was not declared in this scope
   49 |   printf(
      |   ^~~~~~
/home/runner/work/cursed-drone/cursed-drone/third_party/eurorack/plaits/user_data.h:49:3: note: ‘printf’ is defined in header ‘<cstdio>’; did you forget to ‘#include <cstdio>’?
gmake[2]: *** [CMakeFiles/cursed_drone_plaits.dir/build.make:569: CMakeFiles/cursed_drone_plaits.dir/third_party/eurorack/plaits/dsp/voice.cc.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:140: CMakeFiles/cursed_drone_plaits.dir/all] Error 2
gmake: *** [Makefile:101: all] Error 2
